overflow and structure [fixed #29]

--- a/public/app/styles/_base.scss
+++ b/public/app/styles/_base.scss
@@ -5,8 +5,13 @@ body {
   font-family: $font-family;
   font-size: $font-size;
 
+  overflow: hidden;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
+}
+
+body [data-transform] {
+  overflow: visible;
 }
 
 h1 {
