--- a/public/app/styles/layouts/_application.scss
+++ b/public/app/styles/layouts/_application.scss
@@ -1,6 +1,6 @@
 .layout-page-header {
   background: $primary;
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 100%;
   width: 100%;
@@ -12,18 +12,14 @@
   .layout-page.is-active > & {
     left: 0;
   }
-  .layout-page.is-moved > & {
-    left: 20%;
-  }
 }
 
 .layout-page {
   position: fixed;
+  bottom: 0;
   top: 0;
   left: 100%;
   width: 100%;
-  height: 100%;
-  min-height: 100%;
 
   background: $primary;
 
@@ -34,14 +30,9 @@
 
   &.is-active {
     left: 0;
-    &#applicationView {
-      top: 0;
-      position: absolute;
-      height: auto;
-    }
   }
   &.is-moved {
-    left: 20%;
+    @include transform(translateX(20%));
   }
 }
 
@@ -55,6 +46,7 @@
   background: $fourth;
 
   overflow: auto;
+  -webkit-overflow-scrolling: touch;
 
   @include transition(all .3s ease);
 
@@ -106,33 +98,23 @@
   right: 0;
   top: 122px;
 
-  #applicationView > & {
-    top: 0;
-    position: relative;
-    bottom: auto;
-    padding-top: 122px;
-  }
+  overflow-y: auto;
+  -webkit-overflow-scrolling: touch;
 }
 
 
 @media screen and (max-width: $sm) {
   .layout-page-header {
-    height: 95px;
-    #applicationView > & {
-      height: 132px;
+    height: 132px;
+    #mapView > & {
+      height: 95px;
     }
-  }
-  #header {
-    height: 95px;
   }
   .layout-aside.is-active {
     width: 80%;
   }
   .layout-page.is-moved {
-    left: 80%;
-  }
-  .layout-page.is-moved .layout-page-header {
-    left: 80%;
+    @include transform(translateX(80%));
   }
   .layout-header {
     padding: 6px 0;
@@ -142,9 +124,8 @@
       margin-left: 10px;
     }
   }
-  #applicationView .layout-content, .layout-content {
-    padding-top: 95px;
-    top: 0;
+  #mapView .layout-content {
+    top: 95px;
   }
 }
 
@@ -153,10 +134,7 @@
     width: 50%;
   }
   .layout-page.is-moved {
-    left: 50%;
-  }
-  .layout-page.is-moved .layout-page-header {
-    left: 50%;
+    @include transform(translateX(50%));
   }
 }
 
@@ -164,11 +142,8 @@
   .layout-aside.is-active {
     width: 30%;
   }
-  .layout-page.is-moved .layout-page-header {
-    left: 30%;
-  }
   .layout-page.is-moved {
-    left: 30%;
+    @include transform(translateX(30%));
   }
 }
 
@@ -176,11 +151,8 @@
   .layout-aside.is-active {
     width: 25%;
   }
-  .layout-page.is-moved .layout-page-header {
-    left: 25%;
-  }
   .layout-page.is-moved {
-    left: 25%;
+    @include transform(translateX(25%));
   }
 }
 
@@ -188,10 +160,7 @@
   .layout-aside.is-active {
     width: 20%;
   }
-  .layout-page.is-moved .layout-page-header {
-    left: 20%;
-  }
   .layout-page.is-moved {
-    left: 20%;
+    @include transform(translateX(20%));
   }
 }
