--- a/public/app/styles/modules/_indicators.scss
+++ b/public/app/styles/modules/_indicators.scss
@@ -217,9 +217,6 @@
 }
 
 @media only screen and (max-width: $sm) {
-  .mod-indicators {
-    margin-top: 30px;
-  }
   .mod-indicators-item {
     .mod-indicators-header, .mod-indicators-footer {
       height: 120px;
