--- a/public/app/styles/modules/_map.scss
+++ b/public/app/styles/modules/_map.scss
@@ -33,6 +33,6 @@
 
 @media only screen and (max-width: $sm) {
   #map {
-    top: 292px;
+    top: 195px;
   }
 }
